--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -12,7 +12,9 @@
         <!--<mat-icon>expand_more</mat-icon>
       </button>
     </ng-container>-->
-    <h3 class="title-user"></h3>
+    <a href="#" class="title-user">María José</a>
+    <a href="#"><i class="fa-sharp fa-regular fa-circle-pause"></i></a>
+    <i class="fa-solid fa-arrow-left-long"></i>
     <ng-template #loginButton>
       <button mat-button routerLink="login">
         <mat-icon>login</mat-icon>
