--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,15 +8,144 @@
     border-radius: 16px;
 }
 .messages{
-    width: 40%;
+    width: 60%;
     margin: 16px;
     background: #c5cae9;
     border-radius: 16px;  
+    padding: 24px;
+    background: rgba(0,0,0,0.05);
 }
 .chat-list .chat-title{
-    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000080;
     text-align: center;
 }
 .search-users{
     margin: 24px;
+}
+.chat-title-list{
+    display: flex !important;
+    justify-content: space-between;
+}
+.chat-name{
+    font-weight: 500;
+}
+.chat-date{
+    font-size: 0.7rem;
+    color: rgba(0,0,0,0.7);
+}
+.chat-time{
+    font-size: 0.7rem;
+    color: red;
+}
+.message-Header{
+    display: flex;
+    margin-bottom: 8px;
+}
+.message-Header > img{
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 16px;
+    height: 35px;
+}
+.message-Header > h2{
+    margin: 0;
+}
+.chat-area{
+    height: calc(100vh - 270px);
+    display: flex;
+    flex-direction:column;
+    background: white;
+}
+.chat-area > :first-child{
+    margin-top: auto;
+}
+.input-area > mat-form-field{
+    width: 100%;
+}
+.input-area{
+    padding-top: 16px;
+    padding-bottom: 8px;
+}
+.chat-bubble-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+.chat-bubble-container.sender{ /*Enviar mensaje al usuario*/
+    justify-content: flex-end;
+}
+.chat-bubble-container.sender > .chat-bubble{
+    background: #c5cae9;
+}
+.chat-bubble{
+    background: #000080;
+    padding-top: 8px;
+    padding-bottom: 18px;
+    padding-left: 8px;
+    padding-right: 100px;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    width: fit-content;
+    color:white;
+
+    position: relative;
+}
+.chat-bubble > .chat-date{
+    position: absolute;
+    bottom: 2px;
+    right: 8px;
+    font-size: 0.7rem;
+    color: white;
+}
+.chat-bubble-container > img{
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 16px;
+    height: 35px;
+}
+.card-contact{
+    color: black;
+    position: fixed;
+    padding-left: 46%;
+    padding-top: 100px;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+.card-message{
+    color: black;
+    position: fixed;
+    padding-left: 46%;
+    padding-top: 150px;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+.card-edit{
+    color: black;
+    position: fixed;
+    padding-left: 46%;
+    padding-top: 200px;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+.card-time{
+    color: black;
+    position: fixed;
+    padding-left: 46%;
+    padding-top: 250px;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+.card-like{
+    color: black;
+    position: fixed;
+    padding-left: 46%;
+    padding-top: 300px;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
 }
