--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -2,6 +2,17 @@
     height: 12%;
 }*/
 .title-user{
-    color:blue;
-    left: 50px;
+    color: #000080;
+    text-decoration: none;
+    padding-left: 65%;
+}
+.fa-sharp{
+    color: #000080;
+    padding-left: 200%;
+    cursor: pointer;
+}
+.fa-solid{
+    color: #000080;
+    padding-left: 65px;
+    cursor: pointer;
 }
